--- a/prvaZadacaIOS/prvaZadacaIOS/Controllers/FirstViewController.xib
+++ b/prvaZadacaIOS/prvaZadacaIOS/Controllers/FirstViewController.xib
@@ -24,46 +24,70 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0qx-fs-dti">
-                    <rect key="frame" x="285" y="42" width="52" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0qx-fs-dti">
+                    <rect key="frame" x="292" y="50" width="52" height="30"/>
                     <state key="normal" title="Dohvati"/>
                     <connections>
                         <action selector="fetchButton:" destination="-1" eventType="touchUpInside" id="iGP-CJ-NbP"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Fun fact" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5H0-6m-jvb">
-                    <rect key="frame" x="30" y="42" width="76" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fun fact" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5H0-6m-jvb">
+                    <rect key="frame" x="50" y="50" width="62.666666666666657" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="ERROR" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W0y-85-aLF">
-                    <rect key="frame" x="174" y="58" width="55" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ERROR" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W0y-85-aLF">
+                    <rect key="frame" x="167" y="50" width="80" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="c9I-VB-zkP"/>
+                        <constraint firstAttribute="width" constant="80" id="uE3-gh-95d"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
                     <color key="textColor" red="1" green="0.40627573589999999" blue="0.45628877919999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="e2b-IT-vgp">
-                    <rect key="frame" x="157" y="139" width="100" height="100"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="e2b-IT-vgp">
+                    <rect key="frame" x="157" y="155" width="100" height="100"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="100" id="hTj-sp-6bV"/>
+                        <constraint firstAttribute="height" constant="100" id="vVp-uQ-lyy"/>
+                    </constraints>
                 </imageView>
-                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Gc-63-EWD">
-                    <rect key="frame" x="20" y="101" width="374" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Gc-63-EWD">
+                    <rect key="frame" x="20" y="110" width="374" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="41w-2M-o0u"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HGA-tS-fod">
-                    <rect key="frame" x="37" y="264" width="329" height="329"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HGA-tS-fod">
+                    <rect key="frame" x="40" y="285" width="334" height="401"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="3Gc-63-EWD" secondAttribute="trailing" constant="20" id="4LN-Dt-tXM"/>
+                <constraint firstItem="W0y-85-aLF" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="50" id="Ift-fb-Qiv"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="HGA-tS-fod" secondAttribute="bottom" constant="50" id="Mfp-nW-hSZ"/>
+                <constraint firstItem="W0y-85-aLF" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="OZH-Kd-Seh"/>
+                <constraint firstItem="3Gc-63-EWD" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="PZU-op-OkN"/>
+                <constraint firstAttribute="trailing" secondItem="0qx-fs-dti" secondAttribute="trailing" constant="70" id="TXA-ny-zMa"/>
+                <constraint firstItem="e2b-IT-vgp" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="VIu-q6-Spi"/>
+                <constraint firstItem="3Gc-63-EWD" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="W9k-hi-EHx"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="HGA-tS-fod" secondAttribute="trailing" constant="40" id="WTe-Js-97e"/>
+                <constraint firstItem="e2b-IT-vgp" firstAttribute="top" secondItem="3Gc-63-EWD" secondAttribute="bottom" constant="15" id="bhp-Dz-8pW"/>
+                <constraint firstItem="HGA-tS-fod" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="cJf-5Y-qga"/>
+                <constraint firstItem="5H0-6m-jvb" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="50" id="cWF-Uy-Dyu"/>
+                <constraint firstItem="0qx-fs-dti" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="50" id="iiv-qb-wV8"/>
+                <constraint firstItem="HGA-tS-fod" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="40" id="l96-rS-hqu"/>
+                <constraint firstItem="HGA-tS-fod" firstAttribute="top" secondItem="e2b-IT-vgp" secondAttribute="bottom" constant="30" id="qNT-rN-H8q"/>
+                <constraint firstItem="5H0-6m-jvb" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="50" id="rS9-Nf-hLE"/>
+                <constraint firstItem="3Gc-63-EWD" firstAttribute="top" secondItem="W0y-85-aLF" secondAttribute="bottom" constant="20" id="vKN-3p-Jlj"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="137.68115942028987" y="152.44565217391306"/>
         </view>
