--- a/prvaZadacaIOS/prvaZadacaIOS/Views/QuestionView1.xib
+++ b/prvaZadacaIOS/prvaZadacaIOS/Views/QuestionView1.xib
@@ -23,40 +23,38 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="424"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lVK-7N-A8y">
-                    <rect key="frame" x="78" y="20" width="219" height="93"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lVK-7N-A8y">
+                    <rect key="frame" x="30" y="20" width="315" height="100"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="100" id="78t-pG-dh8"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ymt-la-0AZ">
-                    <rect key="frame" x="46" y="121" width="283" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ymt-la-0AZ">
+                    <rect key="frame" x="50" y="130" width="275" height="30"/>
                     <state key="normal" title="Prvo pitanje"/>
                     <connections>
                         <action selector="firstButtonTapped:" destination="-1" eventType="touchUpInside" id="kVe-4g-izj"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WgL-3K-7bf">
-                    <rect key="frame" x="46" y="170" width="283" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WgL-3K-7bf">
+                    <rect key="frame" x="50" y="170" width="275" height="30"/>
                     <state key="normal" title="Drugo pitanje pitanja"/>
                     <connections>
                         <action selector="secondButtonTapped:" destination="-1" eventType="touchUpInside" id="rP6-vc-INl"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" layoutMarginsFollowReadableWidth="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dww-Y9-huR">
-                    <rect key="frame" x="46" y="208" width="283" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" layoutMarginsFollowReadableWidth="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dww-Y9-huR">
+                    <rect key="frame" x="50" y="210" width="275" height="30"/>
                     <state key="normal" title="Trece Pitanje pitanja"/>
                     <connections>
                         <action selector="thirdButtonTapped:" destination="-1" eventType="touchUpInside" id="WPu-hu-AFQ"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cvB-Mv-DtT">
-                    <rect key="frame" x="46" y="246" width="283" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cvB-Mv-DtT">
+                    <rect key="frame" x="50" y="250" width="275" height="30"/>
                     <state key="normal" title="Cetvrto pitanje"/>
                     <connections>
                         <action selector="fourthButtonTapped:" destination="-1" eventType="touchUpInside" id="M9g-MR-NH6"/>
@@ -64,6 +62,28 @@
                 </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="WgL-3K-7bf" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="50" id="0fc-eQ-xXZ"/>
+                <constraint firstItem="Ymt-la-0AZ" firstAttribute="top" secondItem="lVK-7N-A8y" secondAttribute="bottom" constant="10" id="376-Wl-Y41"/>
+                <constraint firstItem="lVK-7N-A8y" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Ays-Tc-SC5"/>
+                <constraint firstItem="Ymt-la-0AZ" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="50" id="Elt-OM-0xf"/>
+                <constraint firstItem="Dww-Y9-huR" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="50" id="GeV-Qz-zl9"/>
+                <constraint firstItem="cvB-Mv-DtT" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Lrw-mc-bfS"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="lVK-7N-A8y" secondAttribute="trailing" constant="30" id="NKV-Zm-iPh"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Ymt-la-0AZ" secondAttribute="trailing" constant="50" id="Q6y-vI-qQW"/>
+                <constraint firstItem="WgL-3K-7bf" firstAttribute="top" secondItem="Ymt-la-0AZ" secondAttribute="bottom" constant="10" id="Rca-lj-WNv"/>
+                <constraint firstItem="Ymt-la-0AZ" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Ylb-mE-S77"/>
+                <constraint firstItem="cvB-Mv-DtT" firstAttribute="top" secondItem="Dww-Y9-huR" secondAttribute="bottom" constant="10" id="as1-aH-NEf"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="cvB-Mv-DtT" secondAttribute="trailing" constant="50" id="cRX-LN-4LY"/>
+                <constraint firstItem="lVK-7N-A8y" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="20" id="iGW-BV-bYU"/>
+                <constraint firstItem="WgL-3K-7bf" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="l11-7P-RHi"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="WgL-3K-7bf" secondAttribute="trailing" constant="50" id="mLq-Ub-kG1"/>
+                <constraint firstItem="Dww-Y9-huR" firstAttribute="top" secondItem="WgL-3K-7bf" secondAttribute="bottom" constant="10" id="oL8-Na-yVB"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Dww-Y9-huR" secondAttribute="trailing" constant="50" id="pXT-ze-hVq"/>
+                <constraint firstItem="Dww-Y9-huR" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="t7a-0B-Khm"/>
+                <constraint firstItem="lVK-7N-A8y" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="30" id="wo2-Uk-bxY"/>
+                <constraint firstItem="cvB-Mv-DtT" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="50" id="zZZ-WB-0fG"/>
+            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="-275" y="-42"/>
