--- a/prvaZadacaIOS/prvaZadacaIOS/Controllers/FirstViewController.xib
+++ b/prvaZadacaIOS/prvaZadacaIOS/Controllers/FirstViewController.xib
@@ -11,9 +11,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FirstViewController" customModule="prvaZadacaIOS" customModuleProvider="target">
             <connections>
-                <outlet property="QuestionViewFrame" destination="HGA-tS-fod" id="xLb-dn-FEG"/>
                 <outlet property="errorMessage" destination="W0y-85-aLF" id="C7p-2W-xjL"/>
                 <outlet property="numberOfQuestions" destination="5H0-6m-jvb" id="TiE-Jx-cg2"/>
+                <outlet property="questionViewFrame" destination="HGA-tS-fod" id="xLb-dn-FEG"/>
                 <outlet property="quizImage" destination="e2b-IT-vgp" id="lUg-j4-mKY"/>
                 <outlet property="quizTitle" destination="3Gc-63-EWD" id="48O-hp-BZc"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
