--- a/prvaZadacaIOS/prvaZadacaIOS/Controllers/FirstViewController.xib
+++ b/prvaZadacaIOS/prvaZadacaIOS/Controllers/FirstViewController.xib
@@ -24,17 +24,27 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2pI-Da-KB1">
+                    <rect key="frame" x="0.0" y="20" width="414" height="73"/>
+                    <color key="backgroundColor" red="0.31651045981772991" green="0.36470588235294116" blue="0.46560817108533548" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="73" id="tlI-Bn-Tm6"/>
+                    </constraints>
+                </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0qx-fs-dti">
-                    <rect key="frame" x="292" y="50" width="52" height="30"/>
-                    <state key="normal" title="Dohvati"/>
+                    <rect key="frame" x="319" y="40" width="65" height="35"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                    <state key="normal" title="Dohvati">
+                        <color key="titleColor" red="0.01176470588" green="0.85490196080000003" blue="0.77647058820000003" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
                     <connections>
                         <action selector="fetchButton:" destination="-1" eventType="touchUpInside" id="iGP-CJ-NbP"/>
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fun fact" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5H0-6m-jvb">
-                    <rect key="frame" x="50" y="50" width="62.666666666666657" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
+                    <rect key="frame" x="30.000000000000007" y="45" width="69.666666666666686" height="23"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                    <color key="textColor" red="0.01176470588" green="0.85490196080000003" blue="0.77647058820000003" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ERROR" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W0y-85-aLF">
@@ -48,14 +58,14 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="e2b-IT-vgp">
-                    <rect key="frame" x="157" y="155" width="100" height="100"/>
+                    <rect key="frame" x="157" y="185" width="100" height="100"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="100" id="hTj-sp-6bV"/>
                         <constraint firstAttribute="height" constant="100" id="vVp-uQ-lyy"/>
                     </constraints>
                 </imageView>
                 <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Gc-63-EWD">
-                    <rect key="frame" x="20" y="110" width="374" height="30"/>
+                    <rect key="frame" x="20" y="140" width="374" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="41w-2M-o0u"/>
                     </constraints>
@@ -64,29 +74,32 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HGA-tS-fod">
-                    <rect key="frame" x="40" y="285" width="334" height="401"/>
+                    <rect key="frame" x="40" y="315" width="334" height="371"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="2pI-Da-KB1" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="08q-q4-mMY"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="3Gc-63-EWD" secondAttribute="trailing" constant="20" id="4LN-Dt-tXM"/>
+                <constraint firstItem="2pI-Da-KB1" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="5aN-b7-UZT"/>
                 <constraint firstItem="W0y-85-aLF" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="50" id="Ift-fb-Qiv"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="HGA-tS-fod" secondAttribute="bottom" constant="50" id="Mfp-nW-hSZ"/>
                 <constraint firstItem="W0y-85-aLF" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="OZH-Kd-Seh"/>
                 <constraint firstItem="3Gc-63-EWD" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="PZU-op-OkN"/>
-                <constraint firstAttribute="trailing" secondItem="0qx-fs-dti" secondAttribute="trailing" constant="70" id="TXA-ny-zMa"/>
+                <constraint firstAttribute="trailing" secondItem="0qx-fs-dti" secondAttribute="trailing" constant="30" id="TXA-ny-zMa"/>
                 <constraint firstItem="e2b-IT-vgp" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="VIu-q6-Spi"/>
                 <constraint firstItem="3Gc-63-EWD" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="W9k-hi-EHx"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="HGA-tS-fod" secondAttribute="trailing" constant="40" id="WTe-Js-97e"/>
                 <constraint firstItem="e2b-IT-vgp" firstAttribute="top" secondItem="3Gc-63-EWD" secondAttribute="bottom" constant="15" id="bhp-Dz-8pW"/>
                 <constraint firstItem="HGA-tS-fod" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="cJf-5Y-qga"/>
-                <constraint firstItem="5H0-6m-jvb" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="50" id="cWF-Uy-Dyu"/>
-                <constraint firstItem="0qx-fs-dti" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="50" id="iiv-qb-wV8"/>
+                <constraint firstItem="5H0-6m-jvb" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="cWF-Uy-Dyu"/>
+                <constraint firstItem="2pI-Da-KB1" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="hHa-QP-AQb"/>
+                <constraint firstItem="0qx-fs-dti" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="40" id="iiv-qb-wV8"/>
                 <constraint firstItem="HGA-tS-fod" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="40" id="l96-rS-hqu"/>
                 <constraint firstItem="HGA-tS-fod" firstAttribute="top" secondItem="e2b-IT-vgp" secondAttribute="bottom" constant="30" id="qNT-rN-H8q"/>
-                <constraint firstItem="5H0-6m-jvb" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="50" id="rS9-Nf-hLE"/>
-                <constraint firstItem="3Gc-63-EWD" firstAttribute="top" secondItem="W0y-85-aLF" secondAttribute="bottom" constant="20" id="vKN-3p-Jlj"/>
+                <constraint firstItem="5H0-6m-jvb" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="45" id="rS9-Nf-hLE"/>
+                <constraint firstItem="3Gc-63-EWD" firstAttribute="top" secondItem="W0y-85-aLF" secondAttribute="bottom" constant="50" id="vKN-3p-Jlj"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="137.68115942028987" y="152.44565217391306"/>
