--- a/prvaZadacaIOS/prvaZadacaIOS/Views/TableCellView.xib
+++ b/prvaZadacaIOS/prvaZadacaIOS/Views/TableCellView.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="TableCellView" customModule="prvaZadacaIOS" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="160"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -34,21 +34,21 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="difficultyLogo" translatesAutoresizingMaskIntoConstraints="NO" id="Xky-BC-ISg">
+                <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="difficultyLogo" translatesAutoresizingMaskIntoConstraints="NO" id="Xky-BC-ISg">
                     <rect key="frame" x="330" y="15" width="25" height="25"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="25" id="3Wp-b2-5xF"/>
                         <constraint firstAttribute="width" constant="25" id="6ar-lj-XWI"/>
                     </constraints>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="difficultyLogo" translatesAutoresizingMaskIntoConstraints="NO" id="AvS-Vl-iYb">
+                <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="difficultyLogo" translatesAutoresizingMaskIntoConstraints="NO" id="AvS-Vl-iYb">
                     <rect key="frame" x="301" y="15" width="25" height="25"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="25" id="0R1-Ra-Shu"/>
                         <constraint firstAttribute="width" constant="25" id="5bx-fu-AMD"/>
                     </constraints>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="difficultyLogo" translatesAutoresizingMaskIntoConstraints="NO" id="TDc-MH-7Ac">
+                <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="difficultyLogo" translatesAutoresizingMaskIntoConstraints="NO" id="TDc-MH-7Ac">
                     <rect key="frame" x="272" y="15" width="25" height="25"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="25" id="eL6-26-PYi"/>
@@ -76,6 +76,14 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <connections>
+                <outlet property="firstStar" destination="Xky-BC-ISg" id="1eQ-ii-4XR"/>
+                <outlet property="quizDescription" destination="Wf4-IM-Y0a" id="8kK-k5-3UA"/>
+                <outlet property="quizImage" destination="Sy2-jT-hax" id="HZw-2X-mTc"/>
+                <outlet property="quizName" destination="pdT-Dg-Mu4" id="Jus-jw-CH7"/>
+                <outlet property="secondStar" destination="AvS-Vl-iYb" id="Yfu-Vt-302"/>
+                <outlet property="thirdStar" destination="TDc-MH-7Ac" id="5rg-8K-eJ1"/>
+            </connections>
             <point key="canvasLocation" x="138.40000000000001" y="-106.14692653673164"/>
         </view>
     </objects>
