--- a/prvaZadacaIOS/prvaZadacaIOS/Controllers/ListOfQuizesViewController.xib
+++ b/prvaZadacaIOS/prvaZadacaIOS/Controllers/ListOfQuizesViewController.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ListOfQuizesViewController" customModule="prvaZadacaIOS" customModuleProvider="target">
             <connections>
-                <outlet property="tableView" destination="Jgt-zr-0fj" id="L0v-4y-FZk"/>
+                <outlet property="tableView" destination="Jgt-zr-0fj" id="7Zf-4b-CrL"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
